Fix auth signup flow and add i18n translations

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
 node_modules
 .DS_Store
 dist
+
+# Next.js
+.next/
+out/
+
+# Environment
+.env
+.env.local
+.env*.local
+
+# Typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# Vercel
+.vercel
