--- a/package.json
+++ b/package.json
@@ -1,25 +1,36 @@
 {
-  "name": "bpmn_experiments",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
+  "name": "bpmn-editor",
+  "version": "2.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
     "@bpmn-io/properties-panel": "^3.24.1",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.47.10",
+    "autoprefixer": "^10.4.22",
     "bpmn-js": "^17.11.1",
     "bpmn-js-color-picker": "^0.7.1",
     "bpmn-js-properties-panel": "^5.25.0",
-    "copy-webpack-plugin": "^12.0.2",
-    "css-loader": "^7.1.2",
-    "diagram-js": "^14.11.3",
-    "preact": "^10.24.2",
-    "raw-loader": "^4.0.2",
-    "style-loader": "^4.0.0",
-    "webpack": "^5.95.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0"
+    "i18next": "^25.7.1",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "next": "^15.0.3",
+    "postcss": "^8.5.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-i18next": "^16.4.0",
+    "tailwindcss": "3"
   },
-  "scripts": {
-    "build": "webpack --mode production",
-    "dev": "webpack-dev-server --static=public --open"
+  "devDependencies": {
+    "@types/node": "^22.10.1",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "eslint": "^9.15.0",
+    "eslint-config-next": "^15.0.3",
+    "typescript": "^5.7.2"
   }
 }
